# desmos-contracts

./: .codecov.yml  .gitignore  .gitmodules  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Developing.md  NOTICE  README.md  helper.ts  package.json
.circleci/: config.yml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: Basic.yml  Filter_posts.yml  build.yml  desmos.yml  desmos_cw.yml  desmos_std.yml  dtag-auctions-contract.yml  dummy_contracts.yml  filter_posts.yml  lint.yml  proto-compiler  release.yml  test.yml
contracts/: README.md
contracts/cw721-poap/: Cargo.toml  README.md
contracts/cw721-poap/.cargo/: config
contracts/cw721-poap/examples/: schema.rs
contracts/cw721-poap/schema/: all_nft_info_response.json  execute_msg.json  nft_info_response.json
contracts/cw721-poap/src/: lib.rs
contracts/cw721-remarkables/: Cargo.toml  README.md
contracts/cw721-remarkables/examples/: schema.rs
contracts/cw721-remarkables/schema/: all_nft_info_response.json  execute_msg.json  nft_info_response.json
contracts/cw721-remarkables/src/: lib.rs
contracts/dtag-auctioneer/: Cargo.toml
contracts/dtag-auctioneer/examples/: schema.rs
contracts/dtag-auctioneer/schema/: execute_msg.json  instantiate_msg.json
contracts/dtag-auctioneer/src/: contract.rs  error.rs  msg.rs  state.rs
contracts/dtag-auctions/: Cargo.toml  README.md
contracts/dtag-auctions/docs/: cli_messages.txt
contracts/dtag-auctions/examples/: schema.rs
contracts/dtag-auctions/schema/: execute_msg.json  query_msg.json  sudo_msg.json
contracts/dtag-auctions/src/: contract.rs  error.rs  msg.rs  state.rs
contracts/dummy-tokenomics/: CHANGELOG.md  Cargo.toml  README.md
contracts/dummy-tokenomics/examples/: schema.rs
contracts/dummy-tokenomics/schema/: sudo_msg.json
contracts/dummy-tokenomics/src/: contract.rs  errors.rs  lib.rs  msg.rs  state.rs
contracts/dummy-tokenomics/tests/: cw_desmos_dummy_tokenomics.wasm  dummy_tokenomics.wasm  integration.rs
contracts/example/: Cargo.toml  NOTICE
contracts/example/examples/: schema.rs
contracts/example/src/: contract.rs
contracts/filter-posts/: CHANGELOG.md  Cargo.toml  README.md  helper.ts
contracts/filter-posts/deploy/: deploy_contract.js  desmos_contracts.wasm  faucet.js
contracts/filter-posts/examples/: schema.rs
contracts/filter-posts/schema/: attachment.json  execute_msg.json  handle_msg.json  instantiate_msg.json  query_msg.json  report.json
contracts/filter-posts/src/: contract.rs  contract_test.rs  lib.rs  mock.rs  msg.rs
contracts/filter-posts/tests/: cw_desmos_filter_posts.wasm  desmos_contracts.wasm  filter_posts.wasm  integration.rs
contracts/filter_posts/: Cargo.toml
contracts/filter_posts/schema/: post.json
contracts/filter_posts/src/: contract_test.rs  error.rs  msg.rs
contracts/filter_posts/tests/: integration.rs
contracts/poap/: .gitignore  Cargo.toml  README.md
contracts/poap-manager/: Cargo.toml  README.md
contracts/poap-manager/examples/: schema.rs
contracts/poap-manager/schema/: execute_msg.json  instantiate_msg.json  poap-manager.json  query_config_response.json  query_msg.json
contracts/poap-manager/src/: contract.rs  contract_tests.rs  error.rs  integration_tests.rs  lib.rs  msg.rs  reply.rs  state.rs  test_utils.rs
contracts/poap-v2/: Cargo.toml
contracts/poap-v2/examples/: schema.rs
contracts/poap-v2/src/: contract_tests.rs  error.rs  execute.rs  lib.rs  msg.rs  query.rs  state.rs
contracts/poap/.cargo/: config
contracts/poap/examples/: schema.rs
contracts/poap/schema/: all_nft_info_response_for__metadata.json  config.json  event_info.json  execute_msg.json  instantiate_msg.json  poap-v2.json  poap.json  query_config_response.json  query_event_info_response.json  query_msg.json  state_event_info.json
contracts/poap/src/: contract.rs  contract_tests.rs  cw721_test_utils.rs  cw721_utils.rs  error.rs  execute.rs  helpers.rs  integration_tests.rs  lib.rs  msg.rs  query.rs  state.rs  test_utils.rs
contracts/remarkables/: Cargo.toml  README.md
contracts/remarkables/examples/: schema.rs
contracts/remarkables/schema/: all_nft_info_response_for__empty.json  all_nft_info_response_for__metadata.json  config_state.json  execute_msg.json  instantiate_msg.json  query_config_response.json  query_msg.json  query_rarities_response.json  rarity_state.json  remarkables.json
contracts/remarkables/src/: contract.rs  error.rs  integration_tests.rs  lib.rs  msg.rs  state.rs  test_utils.rs
contracts/social-tips/: Cargo.toml  README.md
contracts/social-tips/examples/: schema.rs
contracts/social-tips/schema/: execute_msg.json  instantiate_msg.json  query_config_response.json  query_msg.json  query_pending_tips_response.json  query_unclaimed_sent_tips_response.json  social-tips.json
contracts/social-tips/src/: contract.rs  error.rs  msg.rs  state.rs  utils.rs
contracts/tips/: Cargo.toml  README.md
contracts/tips/examples/: schema.rs
contracts/tips/schema/: execute_msg.json  instantiate_msg.json  query_config_response.json  query_msg.json  tips.json  tips_response.json
contracts/tips/src/: contract.rs  error.rs  lib.rs  msg.rs  state.rs  utils.rs
deploy/: deploy_contract.js  desmos_contracts.wasm  faucet.js  setup.js
docs/architecture/: README.md  adr-001-poap-contract.md  adr-002-event-manager-contract.md  adr-002-poap-manager-contract.md  adr-003-remarkables-contract.md  adr-004-tips-contract.md  adr-005-social-tips-contract.md  adr-006-advertise-contract.md  adr-006-poap-v2.md
examples/: schema.rs
schema/: handle_msg.json  init_msg.json  poll_answer.json  posts_query_response.json  query_msg.json  state.json
scripts/: publish.sh  set_version.sh
src/: contract.rs  contract_test.rs  lib.rs  mock.rs  msg.rs  query.rs  state.rs  types.rs
tests/: integration.rs
