[workspace]
members = [
    "contracts/*"
]

[workspace.dependencies]
# Cosmwasm related dependencies
cosmwasm-std = "1.1.9"
cosmwasm-storage = "1.1.9"
cosmwasm-schema = "1.2.7"
cw-storage-plus = "0.16.0"
cw-utils = "0.16.0"
cw2 = "0.16.0"
cw-multi-test = "0.15.1"
# Desmos dependencies
desmos-bindings = "1.1.1"
# Misc dependencies
schemars = "0.8.12"
serde = "1.0.160"
thiserror = "1.0.43"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true
