[workspace]
members = [
    "contracts/*"
]

[workspace.dependencies]
# Cosmwasm related dependencies
cosmwasm-std = "1.3.2"
cosmwasm-storage = "1.3.1"
cosmwasm-schema = "1.3.1"
cw-storage-plus = "1.1.0"
cw-utils = "1.0.1"
cw2 = "1.1.0"
cw-multi-test = "0.15.1"
# Desmos dependencies
desmos-bindings = { version = "1.1.1", default-features = false }
# Misc dependencies
schemars = "0.8.12"
serde = { version = "1.0.183", default-features = false }
thiserror = "1.0.44"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true
