[package]
name = "cw-desmos-dtag-auctions"
version = "0.1.0"
authors = ["Leonardo Bragagnolo <leonardo@forbole.com>"]
edition = "2018"
description = "A cosmwasm contract that allows users to create auctions to sell their DTags"
license = "Apache-2.0"
repository = "https://github.com/desmos-labs/desmos-contracts"
keywords = ["desmos-network", "social-network", "blockchain", "smart-contracts"]

exclude = [
  # Those files are rust-optimizer artifacts.
  # You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces", "cosmwasm-vm/backtraces"]

[dependencies]
desmos-std = { path = "../../packages/desmos-std", version = "0.1.0" }
cosmwasm-std = { version = "1.0.0-beta5", features = ["iterator", "staking"] }
cw-storage-plus = { version = "0.11" }
cw2 = "0.11"
schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.23" }

[dev-dependencies]
cosmwasm-vm = { version = "1.0.0-beta", default-features = true }
cosmwasm-schema = { version = "1.0.0-beta" }
