[package]
name = "poap"
version = "0.1.0"
authors = ["Manuel <manuel@forbole.com>"]
edition = "2018"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)"/../..:/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/workspace-optimizer:0.12.6 ./contracts/poap
"""

[dependencies]
cosmwasm-std = "1.0.0"
cosmwasm-storage = "1.1.5"
cw-storage-plus = "0.16.0"
cw2 = "0.16.0"
cw-utils = "0.16.0"
schemars = "0.8.8"
serde = { version = "1.0.147", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.35" }
desmos-bindings = { version = "1.1.1", default-features = false, features = ["query", "msg"]}
cw721-base = { git = "https://github.com/desmos-labs/cw-nfts", features = ["library"], branch = "paul/update-custom-msg-query" }
url = "2.3.1"
cw721-poap = { path = "../cw721-poap", version = "0.1.0", features = ["library"]}
cw721 = { git = "https://github.com/desmos-labs/cw-nfts", branch = "paul/update-custom-msg-query" }
cosmwasm-schema = "1.1.5"

[dev-dependencies]
cw-multi-test = "0.15.0"
desmos-bindings = { version = "1.1.1", default-features = false, features = ["mocks"]}

