[package]
name = "remarkables"
version = "0.1.0"
authors = ["Paul <paul@forbole.com>"]
edition = "2018"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)"/../..:/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/workspace-optimizer:0.12.6 ./contracts/remarkables
"""

[dependencies]
cosmwasm-std = "1.0.0"
cosmwasm-storage = "1.1.5"
cw-storage-plus = { version = "0.16.0"}
cw2 = "0.16.0"
schemars = "0.8.8"
serde = { version = "1.0.145", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.31" }
desmos-bindings = { version = "1.1.1", default-features = false, features = ["query", "msg", "reactions", "posts", "subspaces"] }
cw721-base = { git = "https://github.com/desmos-labs/cw-nfts", features = ["library"], branch = "paul/update-custom-msg-query" }
cw-utils = "0.16.0"
cw721 = { git = "https://github.com/desmos-labs/cw-nfts", branch = "paul/update-custom-msg-query" }
url = "2.3.1"
cw721-remarkables = { path = "../cw721-remarkables", version = "0.1.0", features = ["library"]}

[dev-dependencies]
cosmwasm-schema = "1.0.0"
cw-multi-test = "0.15.0"
desmos-bindings = { version = "1.1.1", default-features = false, features = ["mocks"] }
anyhow = "1.0.65"
