[package]
name = "social-tips"
version = "0.1.0"
authors = ["Manuel Turetta <manuel@forbole.com>"]
edition = "2018"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)"/../..:/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/workspace-optimizer:0.12.6 ./contracts/social-tips
"""

[dependencies]
cosmwasm-std = "1.1.6"
cosmwasm-storage = "1.1.5"
cw-storage-plus = { version = "0.16.0", features = ["macro"] }
cw2 = "0.16.0"
schemars = "0.8.11"
serde = { version = "1.0.145", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.37" }
desmos-bindings = { version = "1.1.1", default-features = false, features = ["query", "profiles", "iterators"]}
cosmwasm-schema = "1.1.5"

[dev-dependencies]
cosmwasm-schema = "1.1.5"
cw-multi-test = "0.15.1"
desmos-bindings = { version = "1.1.1", default-features = false, features = ["query", "profiles", "mocks"]}
