[package]
name = "tips"
version = "0.1.0"
authors = ["Manuel Turetta <manuel@forbole.com>"]
edition = "2021"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)"/../..:/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/workspace-optimizer:0.12.6 ./contracts/tips
"""

[dependencies]
cosmwasm-std.workspace = true
cosmwasm-storage.workspace = true
cw-storage-plus.workspace = true
cw2.workspace = true
schemars.workspace = true
serde = { workspace = true, default-features = false, features = ["derive"] }
thiserror.workspace = true
desmos-bindings = { workspace = true, default-features = false, features = ["posts", "subspaces", "profiles", "query"]}
cw-utils.workspace = true
cosmwasm-schema.workspace = true

[dev-dependencies]
cw-multi-test.workspace = true
desmos-bindings = { workspace = true, default-features = false, features = ["mocks"]}

